[package]
name = "rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
pin-project-lite = "0.2.4"
async-stream = "0.3.2"
